# pact-reference

./: .gitignore  .releaserc  CLAUDE.md  COMPATIBILITY.md  README.md
c/consumer/: CMakeLists.txt  Makefile  README.md  conanfile.txt  justfile
c/consumer/include/: curl_utils.h  logging.h
c/consumer/include/pact/: create_user.h  delete_user.h  get_unknown_user.h  get_user.h  logging_test.h  version.h
c/consumer/src/: curl_utils.c  logging.c  main.c
c/consumer/src/pact/: create_user.c  delete_user.c  get_unknown_user.c  get_user.c  logging_test.c  version.c
c/provider/: CMakeLists.txt  README.md  conanfile.txt  justfile
c/provider/include/: http_server.h  logging.h
c/provider/include/provider/: provider_state.h  user_handlers.h
c/provider/src/: http_server.c  logging.c  main.c
c/provider/src/provider/: provider_state.c  user_handlers.c
rust/: .bazelrc  BUILD.bazel  Cargo.toml  Dockerfile.cli.alpine  MODULE.bazel  README.md  WORKSPACE  cargo-bazel-lock.json  create_crate.bzl  create_pact_binaries.bzl  deps.bzl  extensions.bzl  extensions2.bzl  package-lock.json  package.json  repositories.bzl  repositories2.bzl  toolchains.bzl
rust/pact_cli/: Cargo.toml
rust/pact_consumer/: CHANGELOG.md  Cargo.toml  README.md  release.groovy
rust/pact_consumer/src/: lib.rs  util.rs
rust/pact_consumer/src/builders/: interaction_builder.rs  message_builder.rs  pact_builder.rs  pact_builder_async.rs  request_builder.rs  response_builder.rs  sync_message_builder.rs
rust/pact_consumer/src/mock_server/: http_mock_server.rs
rust/pact_consumer/tests/: tests.rs
rust/pact_ffi/: BUILD.bazel  CHANGELOG.md  CMakeLists.txt  Cargo.toml  IntegrationJson.md  build-cross.sh  build-headers.sh
rust/pact_ffi/src/: lib.rs  matching.rs
rust/pact_ffi/src/log/: ffi.rs  mod.rs  plugin_sink.rs
rust/pact_ffi/src/mock_server/: bodies.rs  handles.rs  mod.rs  xml.rs
rust/pact_ffi/src/models/: generators.rs  matching_rules.rs  pact_specification.rs
rust/pact_ffi/src/plugins/: mod.rs
rust/pact_ffi/src/util/: ffi.rs
rust/pact_ffi/src/verifier/: args.rs  handle.rs  mod.rs  verifier.rs
rust/pact_ffi/tests/: tests.rs
rust/pact_matching/: BUILD.bazel  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  generate-spec-tests.groovy  release.groovy
rust/pact_matching/benches/: v2_engine.rs
rust/pact_matching/examples/: profile_engine.rs
rust/pact_matching/src/: binary_utils.rs  core_capabilities.rs  generator_tests.rs  generators.rs  headers.rs  json.rs  lib.rs  matchers.rs  matchingrules.rs  metrics.rs  query.rs  tests.rs  time_utils.rs  xml.rs
rust/pact_matching/src/engine/: bodies.rs  context.rs  interpreter.rs  mod.rs  value_resolvers.rs  xml.rs
rust/pact_matching/src/engine/bodies/: form_urlencoded.rs  json.rs  mod.rs  multipart.rs  xml.rs
rust/pact_matching/src/engine/tests/: header_tests.rs  mod.rs  query_tests.rs  walk_tree_tests.rs
rust/pact_matching/src/generators/: bodies.rs  mod.rs
rust/pact_matching/src/models/: generators.rs  matchingrules.rs  message.rs  mod.rs
rust/pact_matching/src/models/v4/: mod.rs
rust/pact_matching/tests/: test_pact.json  test_pact_camel_case_spec_version.json  test_pact_matchers.json  test_pact_matchers_old_format.json  test_pact_no_bodies.json  test_pact_no_metadata.json  test_pact_no_spec_version.json  test_pact_no_version.json  test_pact_query_old_format.json  v2_pact_query.json
rust/pact_matching_ffi/: Cargo.toml
rust/pact_matching_ffi/src/log/: ffi.rs  mod.rs
rust/pact_mock_server/: BUILD.bazel  Cargo.toml
rust/pact_mock_server/src/: hyper_server.rs  lib.rs
rust/pact_mock_server_cli/: Cargo.toml  Dockerfile  README.md  release-docker.sh
rust/pact_mock_server_cli/src/: create_mock.rs  main.rs
rust/pact_mock_server_ffi/: Cargo.toml
rust/pact_mock_server_ffi/src/: lib.rs
rust/pact_models/: CHANGELOG.md  Cargo.toml  release.groovy
rust/pact_models/src/: headers.rs  http_utils.rs  json_utils.rs  lib.rs  message_pact.rs  pact.rs  path_exp.rs  query_strings.rs  request.rs  sync_pact.rs  xml_utils.rs
rust/pact_models/src/generators/: date_expression_parser.rs  form_urlencoded.rs  mod.rs  time_expression_parser.rs  xml.rs
rust/pact_models/src/matchingrules/: expressions.rs  mod.rs
rust/pact_models/src/v4/: http_parts.rs  pact.rs
rust/pact_verifier/: BUILD.bazel  CHANGELOG.md  Cargo.toml  release.groovy
rust/pact_verifier/src/: callback_executors.rs  lib.rs  pact_broker.rs  provider_client.rs  tests.rs  utils.rs  verification_result.rs
rust/pact_verifier/src/snapshots/: pact_verifier__tests__process_comments_with_multiple_reference_groups.snap  pact_verifier__tests__process_comments_with_no_references_produces_no_references_section.snap  pact_verifier__tests__process_comments_with_references_combined_with_text_and_testname.snap  pact_verifier__tests__process_comments_with_references_displays_grouped_entries.snap
rust/pact_verifier/tests/: pact-2-interactions.json  pact-two.json  redirect.json  tests.rs
rust/pact_verifier_cli/: BUILD.bazel  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  release-docker.sh  release-linux.sh  release-macos.sh  release-win.sh
rust/pact_verifier_cli/src/: args.rs  bin.rs  lib.rs  main.rs
rust/pact_verifier_cli/src/reports/: mod.rs  verification-report.xsl  xml.rs
rust/pact_verifier_cli/src/reports/snapshots/: pact_verifier_cli__reports__xml__tests__all_mismatch_types.snap  pact_verifier_cli__reports__xml__tests__empty_result.snap  pact_verifier_cli__reports__xml__tests__failing_with_body_mismatch.snap  pact_verifier_cli__reports__xml__tests__pending_errors.snap  (+3 more)
rust/pact_verifier_cli/tests/cmd/: broker-url-requires-provider.stderr  broker-url-requires-provider.toml  filter-conflict.stderr  filter-conflict.toml  help.stdout  help.toml  invalid-loglevel.stderr  invalid-loglevel.toml  invalid-transport.stderr  invalid-transport.toml  last-failed-requires-json.stderr  last-failed-requires-json.toml  main.stderr  main.toml  token-user-conflict.stderr  token-user-conflict.toml  version.stdout  version.toml
rust/scripts/: build-cross.sh  ci-musl-build.sh  test-alpine.sh
(+64 files in other folders)
