[workspace]
members = [
    "pact_*"
]
exclude = [
    "pact_mock_server",
    "pact_mock_server_cli"
]
resolver = "2"

[patch.crates-io]
# Issue 389 - Pull change into other crates
pact_models = { version = "~1.3.6", path = "./pact_models" }

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
