[workspace]
members = [
    "pact_*"
]
exclude = [
    "pact_mock_server",
    "pact_mock_server_cli"
]
resolver = "2"

[patch.crates-io]
# Issue 389 - Pull change into other crates
pact_models = { version = "~1.3.10", path = "./pact_models" }
pact_matching = { version = "~2.0.4", path = "./pact_matching" }

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

# Release-speed optimisations with debug symbols retained — for flamegraph/perf.
[profile.profiling]
inherits = "release"
strip = false
debug = true
