[workspace]
members = [
    "pact_*"
]
exclude = [
    "pact_mock_server",
    "pact_mock_server_cli"
]
resolver = "2"

[patch.crates-io]
# Issue 389 - Pull change into other crates
pact_models = { version = "~1.3.11", path = "./pact_models" }
pact_matching = { version = "~2.0.8", path = "./pact_matching" }
# Track unreleased changes in the crates this workspace depends on but doesn't own, so the whole
# chain can be built and tested together before any of them are published to crates.io.
pact-plugin-driver = { git = "https://github.com/pact-foundation/pact-plugins.git" }
pact_mock_server = { git = "https://github.com/pact-foundation/pact-core-mock-server.git" }

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

# Release-speed optimisations with debug symbols retained — for flamegraph/perf.
[profile.profiling]
inherits = "release"
strip = false
debug = true
