## MODULE.bazel
module(name = "pact_reference", version = "1.1.1")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "bazel_skylib", version = "1.2.0")
bazel_dep(
    name = "apple_support",
    version = "1.3.1",
    repo_name = "build_bazel_apple_support",
)

bazel_dep(name = "rules_rust", version = "0.20.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(
    rust,
    "rust_toolchains",
    "rust_host_tools",
)

cargo_bazel_bootstrap = use_extension("@rules_rust//crate_universe/private/module_extensions:crate_universe_dependencies.bzl", "cargo_bazel_bootstrap")
use_repo(cargo_bazel_bootstrap, "cargo_bazel_bootstrap")
register_toolchains("@rust_toolchains//:all")

pact_ref_deps = use_extension("//:extensions.bzl", "pact_ref_deps")
use_repo(pact_ref_deps,"crate_index")

blob = use_extension("//:extensions2.bzl", "blob")
use_repo(blob,"crate_index__addr2line-0.19.0",
              "crate_index__adler-1.0.2",
              "crate_index__aho-corasick-0.7.20",
              "crate_index__android_system_properties-0.1.5",
              "crate_index__ansi_term-0.12.1",
              "crate_index__anyhow-1.0.69",
              "crate_index__ariadne-0.1.5",
              "crate_index__async-compression-0.3.15",
              "crate_index__async-stream-0.3.3",
              "crate_index__async-stream-impl-0.3.3",
              "crate_index__async-trait-0.1.64",
              "crate_index__atty-0.2.14",
              "crate_index__autocfg-1.1.0",
              "crate_index__axum-0.6.4",
              "crate_index__axum-core-0.3.2",
              "crate_index__backtrace-0.3.67",
              "crate_index__base64-0.13.1",
              "crate_index__base64-0.21.0",
              "crate_index__beef-0.5.2",
              "crate_index__bitflags-1.3.2",
              "crate_index__buf_redux-0.8.4",
              "crate_index__bumpalo-3.12.0",
              "crate_index__bytecount-0.6.3",
              "crate_index__bytes-1.4.0",
              "crate_index__cc-1.0.79",
              "crate_index__cfg-if-1.0.0",
              "crate_index__chrono-0.4.23",
              "crate_index__chrono-tz-0.8.1",
              "crate_index__chrono-tz-build-0.1.0",
              "crate_index__clap-2.34.0",
              "crate_index__clap-4.1.4",
              "crate_index__clap_lex-0.3.1",
              "crate_index__codespan-reporting-0.11.1",
              "crate_index__core-foundation-0.9.3",
              "crate_index__core-foundation-sys-0.8.3",
              "crate_index__crc32fast-1.3.2",
              "crate_index__crossbeam-channel-0.5.6",
              "crate_index__crossbeam-deque-0.8.2",
              "crate_index__crossbeam-epoch-0.9.13",
              "crate_index__crossbeam-utils-0.8.14",
              "crate_index__ctor-0.1.26",
              "crate_index__cxx-1.0.89",
              "crate_index__cxx-build-1.0.89",
              "crate_index__cxxbridge-flags-1.0.89",
              "crate_index__cxxbridge-macro-1.0.89",
              "crate_index__darling-0.14.3",
              "crate_index__darling_core-0.14.3",
              "crate_index__darling_macro-0.14.3",
              "crate_index__diff-0.1.13",
              "crate_index__difference-2.0.0",
              "crate_index__either-1.8.1",
              "crate_index__encoding_rs-0.8.32",
              "crate_index__env_logger-0.10.0",
              "crate_index__env_logger-0.8.4",
              "crate_index__errno-0.2.8",
              "crate_index__errno-dragonfly-0.1.2",
              "crate_index__expectest-0.12.0",
              "crate_index__fastrand-1.8.0",
              "crate_index__fixedbitset-0.4.2",
              "crate_index__flate2-1.0.25",
              "crate_index__fnv-1.0.7",
              "crate_index__form_urlencoded-1.1.0",
              "crate_index__fs2-0.4.3",
              "crate_index__futures-0.3.26",
              "crate_index__futures-channel-0.3.26",
              "crate_index__futures-core-0.3.26",
              "crate_index__futures-executor-0.3.26",
              "crate_index__futures-io-0.3.26",
              "crate_index__futures-macro-0.3.26",
              "crate_index__futures-sink-0.3.26",
              "crate_index__futures-task-0.3.26",
              "crate_index__futures-timer-3.0.2",
              "crate_index__futures-util-0.3.26",
              "crate_index__getrandom-0.2.8",
              "crate_index__gimli-0.27.1",
              "crate_index__glob-0.3.1",
              "crate_index__h2-0.3.15",
              "crate_index__hamcrest2-0.3.0",
              "crate_index__hashbrown-0.12.3",
              "crate_index__heck-0.4.1",
              "crate_index__hermit-abi-0.1.19",
              "crate_index__hermit-abi-0.2.6",
              "crate_index__hermit-abi-0.3.0",
              "crate_index__hex-0.4.3",
              "crate_index__home-0.5.4",
              "crate_index__http-0.2.8",
              "crate_index__http-body-0.4.5",
              "crate_index__http-range-header-0.3.0",
              "crate_index__httparse-1.8.0",
              "crate_index__httpdate-1.0.2",
              "crate_index__humantime-2.1.0",
              "crate_index__hyper-0.14.24",
              "crate_index__hyper-rustls-0.23.2",
              "crate_index__hyper-timeout-0.4.1",
              "crate_index__iana-time-zone-0.1.53",
              "crate_index__iana-time-zone-haiku-0.1.1",
              "crate_index__ident_case-1.0.1",
              "crate_index__idna-0.3.0",
              "crate_index__indexmap-1.9.2",
              "crate_index__indextree-4.5.0",
              "crate_index__instant-0.1.12",
              "crate_index__io-lifetimes-1.0.5",
              "crate_index__ipnet-2.7.1",
              "crate_index__is-terminal-0.4.3",
              "crate_index__itertools-0.10.5",
              "crate_index__itoa-1.0.5",
              "crate_index__js-sys-0.3.61",
              "crate_index__lazy_static-1.4.0",
              "crate_index__lenient_semver-0.4.2",
              "crate_index__lenient_semver_parser-0.4.2",
              "crate_index__lenient_semver_version_builder-0.4.2",
              "crate_index__libc-0.2.139",
              "crate_index__link-cplusplus-1.0.8",
              "crate_index__linux-raw-sys-0.1.4",
              "crate_index__lock_api-0.4.9",
              "crate_index__log-0.4.17",
              "crate_index__logos-0.12.1",
              "crate_index__logos-derive-0.12.1",
              "crate_index__logos-iter-0.1.3",
              "crate_index__maplit-1.0.2",
              "crate_index__matchers-0.1.0",
              "crate_index__matchit-0.7.0",
              "crate_index__md5-0.7.0",
              "crate_index__memchr-2.5.0",
              "crate_index__memoffset-0.7.1",
              "crate_index__mime-0.3.16",
              "crate_index__mime_guess-2.0.4",
              "crate_index__minimal-lexical-0.2.1",
              "crate_index__miniz_oxide-0.6.2",
              "crate_index__mio-0.8.5",
              "crate_index__multimap-0.8.3",
              "crate_index__multipart-0.18.0",
              "crate_index__nom-7.1.3",
              "crate_index__nom8-0.2.0",
              "crate_index__ntapi-0.4.0",
              "crate_index__ntest-0.9.0",
              "crate_index__ntest_test_cases-0.9.0",
              "crate_index__ntest_timeout-0.9.0",
              "crate_index__nu-ansi-term-0.46.0",
              "crate_index__num-0.2.1",
              "crate_index__num-bigint-0.2.6",
              "crate_index__num-complex-0.2.4",
              "crate_index__num-integer-0.1.45",
              "crate_index__num-iter-0.1.43",
              "crate_index__num-rational-0.2.4",
              "crate_index__num-traits-0.2.15",
              "crate_index__num_cpus-1.15.0",
              "crate_index__num_threads-0.1.6",
              "crate_index__object-0.30.3",
              "crate_index__once_cell-1.17.0",
              "crate_index__onig-6.4.0",
              "crate_index__onig_sys-69.8.1",
              "crate_index__openssl-probe-0.1.5",
              "crate_index__os_info-3.6.0",
              "crate_index__os_str_bytes-6.4.1",
              "crate_index__output_vt100-0.1.3",
              "crate_index__overload-0.1.1",
              "crate_index__pact-plugin-driver-0.3.1",
              "crate_index__pact_models-1.0.4",
              "crate_index__panic-message-0.3.0",
              "crate_index__parking_lot-0.12.1",
              "crate_index__parking_lot_core-0.9.7",
              "crate_index__parse-zoneinfo-0.3.0",
              "crate_index__percent-encoding-2.2.0",
              "crate_index__peresil-0.3.0",
              "crate_index__petgraph-0.6.3",
              "crate_index__phf-0.11.1",
              "crate_index__phf_codegen-0.11.1",
              "crate_index__phf_generator-0.11.1",
              "crate_index__phf_shared-0.11.1",
              "crate_index__pin-project-1.0.12",
              "crate_index__pin-project-internal-1.0.12",
              "crate_index__pin-project-lite-0.2.9",
              "crate_index__pin-utils-0.1.0",
              "crate_index__pkg-config-0.3.26",
              "crate_index__ppv-lite86-0.2.17",
              "crate_index__pretty_assertions-1.3.0",
              "crate_index__prettyplease-0.1.23",
              "crate_index__proc-macro-crate-1.3.0",
              "crate_index__proc-macro2-0.4.30",
              "crate_index__proc-macro2-1.0.51",
              "crate_index__prost-0.11.6",
              "crate_index__prost-build-0.11.6",
              "crate_index__prost-derive-0.11.6",
              "crate_index__prost-types-0.11.6",
              "crate_index__quick-error-1.2.3",
              "crate_index__quickcheck-1.0.3",
              "crate_index__quote-0.6.13",
              "crate_index__quote-1.0.23",
              "crate_index__rand-0.8.5",
              "crate_index__rand_chacha-0.3.1",
              "crate_index__rand_core-0.6.4",
              "crate_index__rand_regex-0.15.1",
              "crate_index__rayon-1.6.1",
              "crate_index__rayon-core-1.10.2",
              "crate_index__redox_syscall-0.2.16",
              "crate_index__regex-1.7.1",
              "crate_index__regex-automata-0.1.10",
              "crate_index__regex-syntax-0.6.28",
              "crate_index__remove_dir_all-0.5.3",
              "crate_index__reqwest-0.11.14",
              "crate_index__ring-0.16.20",
              "crate_index__rstest-0.16.0",
              "crate_index__rstest_macros-0.16.0",
              "crate_index__rustc-demangle-0.1.21",
              "crate_index__rustc_version-0.4.0",
              "crate_index__rustix-0.36.8",
              "crate_index__rustls-0.20.8",
              "crate_index__rustls-native-certs-0.6.2",
              "crate_index__rustls-pemfile-1.0.2",
              "crate_index__rustversion-1.0.11",
              "crate_index__ryu-1.0.12",
              "crate_index__safemem-0.3.3",
              "crate_index__schannel-0.1.21",
              "crate_index__scopeguard-1.1.0",
              "crate_index__scratch-1.0.3",
              "crate_index__sct-0.7.0",
              "crate_index__security-framework-2.8.2",
              "crate_index__security-framework-sys-2.8.0",
              "crate_index__semver-1.0.16",
              "crate_index__serde-1.0.152",
              "crate_index__serde_derive-1.0.152",
              "crate_index__serde_json-1.0.92",
              "crate_index__serde_urlencoded-0.7.1",
              "crate_index__serde_with-2.2.0",
              "crate_index__serde_with_macros-2.2.0",
              "crate_index__sharded-slab-0.1.4",
              "crate_index__signal-hook-registry-1.4.0",
              "crate_index__simplelog-0.10.2",
              "crate_index__simplelog-0.12.0",
              "crate_index__siphasher-0.3.10",
              "crate_index__slab-0.4.7",
              "crate_index__smallvec-1.10.0",
              "crate_index__socket2-0.4.7",
              "crate_index__speculate-0.1.2",
              "crate_index__spin-0.5.2",
              "crate_index__strsim-0.10.0",
              "crate_index__strsim-0.8.0",
              "crate_index__sxd-document-0.3.2",
              "crate_index__syn-0.14.9",
              "crate_index__syn-1.0.107",
              "crate_index__sync_wrapper-0.1.2",
              "crate_index__sysinfo-0.26.9",
              "crate_index__tempfile-3.3.0",
              "crate_index__termcolor-1.1.3",
              "crate_index__test-env-log-0.2.8",
              "crate_index__test-log-0.2.11",
              "crate_index__textwrap-0.11.0",
              "crate_index__thiserror-1.0.38",
              "crate_index__thiserror-impl-1.0.38",
              "crate_index__thread_local-1.1.4",
              "crate_index__time-0.1.45",
              "crate_index__time-0.3.17",
              "crate_index__time-core-0.1.0",
              "crate_index__time-macros-0.2.6",
              "crate_index__tinyvec-1.6.0",
              "crate_index__tinyvec_macros-0.1.1",
              "crate_index__tokio-1.25.0",
              "crate_index__tokio-io-timeout-1.2.0",
              "crate_index__tokio-macros-1.8.2",
              "crate_index__tokio-rustls-0.23.4",
              "crate_index__tokio-stream-0.1.11",
              "crate_index__tokio-test-0.4.2",
              "crate_index__tokio-util-0.7.4",
              "crate_index__toml_datetime-0.5.1",
              "crate_index__toml_edit-0.18.1",
              "crate_index__tonic-0.8.3",
              "crate_index__tonic-build-0.8.4",
              "crate_index__tower-0.4.13",
              "crate_index__tower-http-0.3.5",
              "crate_index__tower-layer-0.3.2",
              "crate_index__tower-service-0.3.2",
              "crate_index__tracing-0.1.37",
              "crate_index__tracing-attributes-0.1.23",
              "crate_index__tracing-core-0.1.30",
              "crate_index__tracing-futures-0.2.5",
              "crate_index__tracing-log-0.1.3",
              "crate_index__tracing-subscriber-0.3.16",
              "crate_index__tree_magic_mini-3.0.3",
              "crate_index__trim-margin-0.1.0",
              "crate_index__try-lock-0.2.4",
              "crate_index__twoway-0.1.8",
              "crate_index__typed-arena-1.7.0",
              "crate_index__unicase-2.6.0",
              "crate_index__unicode-bidi-0.3.10",
              "crate_index__unicode-ident-1.0.6",
              "crate_index__unicode-normalization-0.1.22",
              "crate_index__unicode-width-0.1.10",
              "crate_index__unicode-xid-0.1.0",
              "crate_index__untrusted-0.7.1",
              "crate_index__url-2.3.1",
              "crate_index__urlencoding-2.1.2",
              "crate_index__uuid-1.3.0",
              "crate_index__valuable-0.1.0",
              "crate_index__vec_map-0.8.2",
              "crate_index__version_check-0.9.4",
              "crate_index__want-0.3.0",
              "crate_index__wasi-0.10.0-wasi-snapshot-preview1",
              "crate_index__wasi-0.11.0-wasi-snapshot-preview1",
              "crate_index__wasm-bindgen-0.2.84",
              "crate_index__wasm-bindgen-backend-0.2.84",
              "crate_index__wasm-bindgen-futures-0.4.34",
              "crate_index__wasm-bindgen-macro-0.2.84",
              "crate_index__wasm-bindgen-macro-support-0.2.84",
              "crate_index__wasm-bindgen-shared-0.2.84",
              "crate_index__web-sys-0.3.61",
              "crate_index__webmachine-rust-0.2.2",
              "crate_index__webpki-0.22.0",
              "crate_index__webpki-roots-0.22.6",
              "crate_index__which-4.4.0",
              "crate_index__winapi-0.3.9",
              "crate_index__winapi-i686-pc-windows-gnu-0.4.0",
              "crate_index__winapi-util-0.1.5",
              "crate_index__winapi-x86_64-pc-windows-gnu-0.4.0",
              "crate_index__windows-sys-0.42.0",
              "crate_index__windows-sys-0.45.0",
              "crate_index__windows-targets-0.42.1",
              "crate_index__windows_aarch64_gnullvm-0.42.1",
              "crate_index__windows_aarch64_msvc-0.42.1",
              "crate_index__windows_i686_gnu-0.42.1",
              "crate_index__windows_i686_msvc-0.42.1",
              "crate_index__windows_x86_64_gnu-0.42.1",
              "crate_index__windows_x86_64_gnullvm-0.42.1",
              "crate_index__windows_x86_64_msvc-0.42.1",
              "crate_index__winreg-0.10.1",
              "crate_index__yansi-0.5.1",
              "crate_index__zeroize-1.5.7",

)

