[package]
name = "pact_consumer"
version = "1.4.3"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>", "Eric Kidd <git@randomhacks.net>"]
edition = "2024"
description = "Pact-Rust module that provides support for writing consumer pact tests"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_consumer"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT AND Apache-2.0"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "tls", "colour"]
datetime = ["pact_models/datetime", "pact_matching/datetime", "pact_mock_server/datetime", "pact-plugin-driver?/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact_matching/xml", "pact_mock_server/xml", "pact-plugin-driver?/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver", "pact_matching/plugins", "pact_mock_server/plugins"]
multipart = ["pact_matching/multipart", "pact_mock_server/multipart"] # suport for MIME multipart bodies
tls = ["pact_mock_server/tls"]
colour = ["dep:yansi"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
itertools = "0.14.0"
maplit = "1.0.2"
pact_matching = { version = "~2.0.2", path = "../pact_matching", default-features = false }
pact_mock_server = { version = "~2.1.3", default-features = false }
pact_models = { version = "~1.3.7", default-features = false }
pact-plugin-driver = { version = "~0.7.5", optional = true, default-features = false }
regex = "1.12.2"
serde_json = "1.0.149"
termsize = "0.1.9"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
url = "2.5.8"
yansi = { version = "1.0.1", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
expectest = "0.12.0"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.8.5"
tempfile = "3.24.0"
tokio-test = "0.4.5"
test-log = { version = "0.2.19", features = ["trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing-log", "fmt"] }
pretty_assertions = "1.4.1"
