[package]
name = "pact_ffi"
version = "0.5.3"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>", "Matt Fellows <matt.fellows@onegeek.com.au>", "Andrew Lilley Brinker <abrinker@mitre.org>", "Caleb Stepanian <cstepanian@mitre.org>"]
edition = "2021"
description = "Pact interface for foreign languages."
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_ffi"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver", "ffi"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.100"
bytes = "1.11.1"
chrono = "0.4.42"
either = "1.15.0"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
libc = "0.2.180"
log = "0.4.29"
maplit = "1.0.2"
multipart-2021 = { version = "0.19.0", default-features = false, features = ["client", "mock"] }
onig = { version = "6.5.1", default-features = false }
# FFI Inmemory sink uses the global static `LOG_BUFFER` in the pact_matching crate. This is required to be the same
# version as the mock server crate
pact_matching = { version = "~2.0.2", path = "../pact_matching" }
pact_mock_server = "~2.2.1"
pact_models = { version = "~1.3.8" }
pact-plugin-driver = { version = "~0.7.5" }
pact_verifier = { version = "~1.3.2", path = "../pact_verifier" }
panic-message = "0.3.0"
rand = "0.9.2"
rand_regex = "0.18.1"
regex = "1.12.2"
regex-syntax = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sxd-document = "0.3.2"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.41" # This needs to be the same version across all the libs (i.e. plugin driver)
tracing-core = "0.1.33"  # This needs to be the same version across all the pact libs (i.e. plugin driver)
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing-log"] }
uuid = { version = "1.19.0", features = ["v4"] }
zeroize = "1.8.2"

[dev-dependencies]
expectest = "0.12.0"
hamcrest2 = "0.3.0"
pretty_assertions = "1.4.1"
quickcheck = "1.0.3"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "blocking", "json", "multipart"] }
rstest = "0.26.1"
test-log = "0.2.19"
tempfile = "3.24.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
os_info = { version = "3.14.0", default-features = false }
