load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
package(default_visibility = ["//visibility:public"])

rust_library(
    name = "pact_verifier",
    srcs = glob(
        ["src/*.rs"]
    ),
    proc_macro_deps = all_crate_deps(package_name = "pact_verifier", proc_macro = True),
    deps = ["//pact_matching"] + all_crate_deps(package_name = "pact_verifier"),
)
