[package]
name = "pact_verifier"
version = "1.3.5"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2024"
description = "Pact-Rust support library that implements provider verification functions"
documentation = "https://docs.rs/pact_verifier/"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_verifier"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart"]
datetime = ["pact_models/datetime", "pact-plugin-driver?/datetime", "pact_matching/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact-plugin-driver?/xml", "pact_matching/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver", "pact_matching/plugins"]
multipart = ["pact_matching/multipart"] # suport for MIME multipart bodies

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.101"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
difference = "2.0.0"
futures = "0.3.32"
http = "1.4.0"
humantime = "2.3.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
mime = "0.3.17"
pact_matching = { version = "~2.0.3", path = "../pact_matching", default-features = false }
pact_models = { version = "~1.3.8", default-features = false }
pact-plugin-driver = { version = "~0.7.5", optional = true, default-features = false }
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["json"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-core = "0.1.36"
url = "2.5.8"
urlencoding = "2.1.3"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
chrono = "0.4.43"
chrono-tz = "0.10.4"
env_logger = "0.11.9"
expectest = "0.12.0"
pact_consumer = { version = "~1.4.2", path = "../pact_consumer" }
pretty_assertions = "1.4.1"
quickcheck = "1.1.0"
rstest = "0.26.1"
test-log = { version = "0.2.19", features = ["trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "tracing-log", "fmt"] }
